# bank-of-anthos

./: .gitignore  .pylintrc  .trivyignore  CICD_SETUP.md  CODEOWNERS  CONTRIBUTING.md  LLM_DOCUMENTATION_UPDATE.md  Makefile  PORTFOLIO_FRONTEND_IMPLEMENTATION.md  README-opsani.md  README.md  all maoney to christopher paul vincent  allow-agent-to-bank.yaml  arch_json_schema.txt  bank-of-anthos-servo.yaml  bootstrap.sh  catalog-info.yaml  cloudbuild-dev-build.yaml  cloudbuild-dev-deploy.yaml  cloudbuild-dev-secondary-build.yaml  cloudbuild-dev-secondary-deploy.yaml  cloudbuild-dev-secondary.yaml  cloudbuild-dev.yaml  cloudbuild-mvnw.yaml  cloudbuild-prod.yaml  cloudbuild.yaml  clouddeploy.yaml  create_cluster.sh  deny-all.yaml  docker-compose.portfolio.yml  h origin main  launch.sh  llm.txt  loadgenerator.yaml  master_llm.txt  meganlogs.txt  merge-from-origin-main.bat  merge-from-origin.sh  merge-to-origin.bat  mvnw  (+15 more)
.circleci/: config.yml
src/frontend/: .dockerignore  Dockerfile  README.md  api_call.py  cloudbuild.yaml  flask_server.py  frontend.py  frontend.py.tracing-added  llm.txt  logging.conf  pyproject.toml  requirements.in  requirements.txt  skaffold.yaml  sonar-project.properties  startup.sh  traced_thread_pool_executor.py  uwsgi-conf.ini
src/frontend/k8s/: frontend.yaml
src/frontend/k8s/base/: frontend.yaml  kustomization.yaml
src/frontend/k8s/production/: kustomization.yaml
src/frontend/k8s/staging/: kustomization.yaml
src/frontend/templates/: consent.html  index.html  login.html  portfolio.html  signup.html
src/frontend/tests/: test_frontend.py
(+1318 files in other folders)
