# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "frontend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "urllib3>=2.6.0",
    "pyjwt>=2.12.0",
    "cryptography>=46.0.3",
    "gunicorn>=23.0.0",
    "google-auth>=2.45.0",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "opentelemetry-propagator-gcp>=1.11.0",
    "opentelemetry-instrumentation-flask>=0.60b1",
    "opentelemetry-instrumentation-jinja2>=0.60b1",
    "opentelemetry-instrumentation-requests>=0.60b1",
]

[dependency-groups]
dev = [
    "pylint>=3.0",
]
